--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.funbreakvale.driver"
+    namespace "com.funbreak.vale.driver"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
