--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: funbreak_vale_driver
 description: "FunBreak Vale Driver App"
 publish_to: 'none'
 
-version: 1.4.3+125
+version: 1.4.4+126
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -27,6 +27,7 @@ dependencies:
   flutter_sound: ^9.2.13
   path_provider: ^2.1.1
   url_launcher: ^6.3.2
+  device_info_plus: ^9.1.0
 
 dev_dependencies:
   flutter_test:
